--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>The technology or languages I have knowledge about is shown below. The percentage is given upon assumption.</p>
+          <p>The technologies or languages I have knowledge about is shown below. The percentage is given upon assumption.</p>
         </div>
 
         <div class="row skills-content">
