--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>The technologies or languages I have knowledge about is shown below. The percentage is given upon assumption.</p>
+          <p>The technologies or languages I have knowledge about are shown below. The percentages are given upon assumption.</p>
         </div>
 
         <div class="row skills-content">
@@ -257,6 +257,12 @@
             </div>
 
             <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>B.Sc. Engineering (Currenty studying)</h4>
+              <h5>Computer Science &amp; Engineering</h5>
+              <p><em>Islamic University, Bangladesh</em></p>
+              <p>Under graduation</p>
+            </div>
             <div class="resume-item">
               <h4>Higher School Certificate</h4>
               <h5>Science</h5>
