--- a/index.html
+++ b/index.html
@@ -279,9 +279,13 @@
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>Bootstrap</li>
+                <li>React</li>
                 <li>Basic JavaScript</li>
                 <li>PHP</li>
                 <li>MySQL</li>
+                <li>Node.js</li>
+                <li>Express</li>
+                <li>MongoDB</li>
               </ul>
             </div>
             <div class="resume-item">
