--- a/index.html
+++ b/index.html
@@ -274,13 +274,16 @@
             <div class="resume-item">
               <h4>Web Technologies</h4>
               <h5>Present</h5>
-              <p><em>Frontend &amp; Backend</em></p>
+              <p><em>Frontend:</em></p>
               <ul>
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>Bootstrap</li>
                 <li>React</li>
                 <li>Basic JavaScript</li>
+              </ul>
+              <p><em>Backend:</em></p>
+              <ul>
                 <li>PHP</li>
                 <li>MySQL</li>
                 <li>Node.js</li>
