--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <h3 class="resume-title">Working Experience</h3>
             <div class="resume-item">
               <h4>Web Technologies</h4>
-              <h5>Present</h5>
+               <h5>2013 - Present</h5>
               <p><em>Frontend:</em></p>
               <ul>
                 <li>HTML</li>
