--- a/index.html
+++ b/index.html
@@ -294,13 +294,15 @@
             <div class="resume-item">
               <h4>Competitive Programming</h4>
               <h5>2020 - Present</h5>
-              <p><em>Lower Intermediate</em></p>
+              <p><em>Intermediate</em></p>
               <ul>
                 <li>Implementation, Constructive Algorithm</li>
+                <li>Math, Number Theory, Combinatorics</li>
                 <li>Data Structures</li>
                 <li>Sorting and Searching</li>
-                <li>Graph Traversal</li>
-                <li>Several more algorithms</li>
+                <li>Dynamic Programming</li>
+                <li>Trees and Graphs</li>
+                <li>Several More Algorithms and Techniques</li>
               </ul>
             </div>
           </div>
