--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Love:</strong> <span>Coding, Reading</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Working on:</strong> <span>Improving skills</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>royastik27.github.io/web/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>royastik27.github.io/portfolio</span></li>
                 </ul>
               </div>
             </div>
