--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-code"></i>
-              <span data-purecounter-start="0" data-purecounter-end="37" data-purecounter-duration="1" class="purecounter"></span>
-              <p>AtCoder</p>
+              <span data-purecounter-start="0" data-purecounter-end="45" data-purecounter-duration="1" class="purecounter"></span>
+              <p>CodeChef</p>
             </div>
           </div>
 
